@@ -1,3 +1,5 @@
+* Fixed bug where the input down dropdown was badly positioned (#248).
+
 v2.2.2 (2018-11-23)
 * Fixed bug introduced in v2.2.1 (#260).
 
